Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-296

C++ Header guards may not be compliant with C++ standard

    XMLWordPrintableJSON

Details

    Description

      According to the C++ standard symbols that have a single "_" followed by an uppercase
      letter and symbols starting with "__" (double underscore are reserved for the implementer (That is usually the
      compiler/library writer).

      There are numerous header files with guards that violate this standard in the C++ source base.

      Attachments

        Activity

          People

            kpvdr Kim van der Riet
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: