Merged revisions 496678 via svnmerge from https://svn.apache.org/repos/asf/incubator/qpid/trunk/qpid

........
  r496678 | kpvdr | 2007-01-16 08:09:50 -0500 (Tue, 16 Jan 2007) | 1 line
  
  Fixed QPID-296 Header guards may not be compliant with C++ standard
........


git-svn-id: https://svn.apache.org/repos/asf/incubator/qpid/branches/qpid.0-9@517855 13f79535-47bb-0310-9956-ffa450edef68